# temperatures

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  index.html  pyproject.toml
.github/workflows/: linting.yml
data/: 2021.json  2022.json  2023.json  2024.json  2025.json
scripts/: __init__.py  add_temperatures.py  check_temperatures.py  fix_temperatures.py  get_temperatures.py  temperatures.py
view/: chart.html  chart.js  index.html  script.js  style.css  table.html  table.js
